# ecoincome-js-e-invoice-handler

./: .gitignore  README.md  deno.jsonc  mod.ts  package.json
apps/api/: package.json
apps/api/src/: api.ts
libs/logging/: mod.ts  package.json
libs/pathlib-py2ts/: deno.jsonc  mod.test.ts  mod.ts
libs/read-invoice/: deno.jsonc  mod.ts
libs/read-invoice/src/: invoice-dtos.ts  read-invoice.ts
libs/read-invoice/src/xml-reader/: xml-reader-base.ts  xml-reader-factory.ts  xml-reader-xrechnung-ubl.ts  xml-reader-zugferd.ts
libs/read-invoice/tests/: mod.test.ts  mod.xrechnung-ubl.test.ts  mod.zugpferd.test.ts
libs/read-invoice/tests/resources/: README.md
libs/types/: package.json
libs/zugpferd/: deno.jsonc  package.json  py-2-ts-wrapper.ts
libs/zugpferd/py/: install_drafthorse_editable.cmd  install_venv.cmd  install_venv.py  pyproject.toml
libs/zugpferd/src/: index.spec.ts  index.ts  pathlib.ts  read-invoice.ts
libs/zugpferd/src/xml-reader/: xml-reader-base.ts  xml-reader-zugferd.ts
libs/zugpferd/tests/resources/: zugferd_2p1_BASIC_Einfach.xml  zugferd_2p1_BASIC_Rechnungskorrektur.xml  zugferd_2p1_BASIC_Taxifahrt.xml  zugferd_2p1_EN16931_2_Teilrechnung.xml  zugferd_2p1_EN16931_AbweichenderZahlungsempf.xml  zugferd_2p1_EN16931_Betriebskostenabrechnung.xml  zugferd_2p1_EN16931_Einfach_DueDate.xml  zugferd_2p1_EN16931_Einfach_negativePaymentDue.xml  zugferd_2p1_EN16931_ElektronischeAdresse.xml  zugferd_2p1_EN16931_Haftpflichtversicherung_Versicherungssteuer.xml  (+12 more)
libs/zugpferd/xsd-schema-helper/: generate-template-from-xsd.ts
(+6 files in other folders)
